--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,16 @@
-body{
-    background-color: aqua;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.main-container{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+}
+
+.book-form{
+    flex-basis: 30%;
+    height: 100%;
 }
