--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -13,4 +13,28 @@
 .book-form{
     flex-basis: 30%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+    background-color: brown;
+}
+
+.book-form input{
+    height: 2rem;
+    padding: 0 0.25rem;
+    border-radius: 0.25rem;
+    border-color: black;
+}
+
+.submit-button{
+    height: 2rem;
+    cursor: pointer;
+    
+}
+
+.book-list{
+    flex-basis: 70%;
+    height: 100%;
+    background-color: cadetblue;
 }
