--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,102 +1,142 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-.main-container{
+  }
+  
+  body {
+    font-family: "Abel", sans-serif;
+    font-family: "Rubik", sans-serif;
+  }
+  
+  ul {
+    list-style: none;
+  }
+  
+  .main-container {
     width: 100%;
     height: 100vh;
     display: flex;
-}
-
-.book-form{
+  }
+  
+  .medForm {
     flex-basis: 30%;
     height: 100%;
     display: flex;
     flex-direction: column;
     gap: 1rem;
     padding: 1rem;
-    background-color:rgb(0, 171, 137);
-}
-
-.book-form input{
+    background-color: cornflowerblue;
+  }
+  
+  .med-form input {
     height: 2rem;
     padding: 0 0.25rem;
     border-radius: 0.25rem;
     border-color: black;
-}
-
-.submit-button{
+  }
+  
+  .submit-button {
     height: 2rem;
     cursor: pointer;
     border: none;
     border-radius: 0.25rem;
     font-weight: bold;
-}
-
-.format{
+  }
+  
+  .prescriptionSelect {
     height: 2rem;
     border-radius: 0.25rem;
-}
-
-
-
-
-.book-list{
+  }
+  
+  /* ----------------------------------------------------- */
+  .medicine-list {
     flex-basis: 70%;
     height: 100%;
     display: flex;
     flex-direction: column;
-    background-color: cadetblue;
-}
-
-.select-list-button-container{
+    background-color: dimgray;
+  }
+  
+  .select-list-button-container {
     flex-basis: 15%;
     display: flex;
-    justify-content:center;
+    justify-content: center;
     align-items: center;
     gap: 2rem;
     margin-bottom: 1rem;
-    background-color: teal;
-}
-
-.display-books-container{
+  }
+  
+  .displayPrescriptionMedsContainer, .displayNonPrescriptionMedsContainer {
     flex-basis: 85%;
     padding: 0 1rem;
-}
-
-.render-physical-book-button, .render-audio-book-button{
+  }
+  
+  .render-prescription-meds-button,
+  .render-non-prescription-meds-button {
     width: 12rem;
     height: 2rem;
     cursor: pointer;
     border: none;
     border-radius: 0.25rem;
     font-weight: bold;
-}
-
-.physical-books-header, .audio-books-header{
+  }
+  
+  .prescription-meds-header,
+  .non-prescription-meds-header {
     display: flex;
     height: 2.5rem;
-    background-color:whitesmoke;
+    font-weight: bold;
+    background-color: azure;
     border: 2px solid white;
     border-radius: 0.5rem;
-}
-
-.physical-books-header span{
+    margin-bottom: 0.5rem;
+    gap: 1rem;
+  }
+  .prescription-meds-header span {
     flex-basis: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.audio-books-header span{
+  }
+  .non-prescription-meds-header span {
     flex-basis: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.display-audio-books{
+  }
+  
+  .display-non-prescription-meds {
     display: none;
-}
+  }
+  
+  .prescription-meds-row,
+  .non-prescription-meds-row {
+    display: flex;
+    height: 2rem;
+    margin-bottom: 0.5rem;
+    border-radius: 0.5rem;
+    background-color: darkgray;
+  }
+  .prescription-meds-row,
+   span {
+    flex-basis: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .non-prescription-meds-row span {
+    flex-basis: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .delete-button {
+    width: 6rem;
+    height: 1.5rem;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 0.25rem;
+    border: none;
+  }
